# openfhe-integer-examples

./: .gitignore  CMakeLists.txt  Contributing.md  Makefile  README.md  Release_Notes.md
data/: CMakeLists.txt  alice.txt  annakarenina.txt  warandpeace.txt
src/: CMakeLists.txt  debug.h  ss_enc_1.cpp  ss_plain.cpp  strsearch_enc_1.cpp  strsearch_enc_2.cpp  strsearch_plain.cpp
